<resources>
    <string name="app_name">Step Tracker</string>
    <string name="foot_prints">Foot Prints</string>

    <!--Bottom navigation-->
    <string name="nav_stats">Stats</string>
    <string name="nav_home">Home</string>
    <string name="nav_goals">Goals</string>
    <string name="nav_profile">Profile</string>
    <string name="nav_history">History</string>

    <!--Login & Register -->
    <string name="register">Register</string>
    <string name="login">Login</string>
    <string name="login_here">Already a member? Login Here</string>
    <string name="register_here">Not yet a member? Register Here</string>

    <string name="name">Name</string>
    <string name="surname">Surname</string>
    <string name="email">Email</string>
    <string name="dob">Date of Birth</string>
    <string name="password">Password</string>
    <string name="confirm_password">Confirm Password</string>

    <!--Actionbar-->
    <string name="settings">Settings</string>
    <string name="help">Help</string>
    <string name="logout">Logout</string>

    <!--Home-->
    <string name="user">user:</string>
    <string name="default_steps">0</string>
    <string name="default_calories">0</string>
    <string name="default_active_time">00:00</string>
    <string name="default_distance">0.0</string>
    <string name="steps_goal">Goal:</string>
            <!--step count button-->
    <string name="start">Start</string>
    <string name="start_steps">Start</string>
    <string name="pause_steps">Pause</string>

    <!--Stats-->
    <string name="steps">Steps</string>
    <string name="calories">Calories</string>
    <string name="distance">Distance</string>
    <string name="active_time">Active Time</string>

    <!--Settings -->
    <string name="unit_types">Unit Types</string>
    <string name="units_imperial">Imperial</string>
    <string name="units_metric">Metric</string>
    <string name="settings_save">Save</string>

    <!--Profile-->
    <string name="profile_logo">Profile Logo</string>
    <string name="profile_name">Name</string>
    <string name="profile_surname">Surname</string>
    <string name="profile_dob">Date of Birth</string>
    <string name="profile_gender">Gender</string>
    <string name="profile_height">Height</string>
    <string name="profile_weight">Weight</string>
    <string name="profile_email">Email</string>
    <string name="profile_save_button">Save</string>
    <string name="profile_header">Enter your personal info for more accurate analysis</string>

    <!--Goals-->
    <string name="target_goals_heading">Target Goals</string>
    <string name="set_weight_goal">Set Weight Goal</string>
    <string name="set_steps_goal">Set Steps Goal</string>
    <string name="set_goals">Set Goals</string>
    <string name="current_steps_goals">Current Steps Goal</string>
    <string name="current_weight_goals">Current Weight Goal</string>
    <string name="weight_not_available">N/A</string>
    <string name="steps_not_available">N/A</string>

    <!--Camera-->
    <string name="open_camera_button">Open Camera</string>
    <string name="camera_save_button">Save</string>
    <string name="camera">Camera</string>

    <!--Fitness Feed-->
    <string name="fitness_feed">Fitness Feed</string>

    <!--B.M.I Calculator-->
    <string name="bmi_calculator">BMI Calculator</string>
    <string name="bmi_category">BMI Category</string>
    <string name="bmi_result">Result</string>
    <string name="bmi_information">BMI Information</string>

    <!--imperial-->
    <string name="height_m">Height (m)</string>zzz
    <string name="weight_kg">Weight (kg)</string>

    <!--metric-->
    <string name="height_ft">Height (ft)</string>
    <string name="weight_lbs">Weight (lbs)</string>
    <string name="calculate">Calculate</string>
    <string name="clear">Clear</string>

    <string name="body_mass_index">Body Mass Index</string>
    <string name="bmi_underweight">BMI under 18.6 means you\'re: UNDERWEIGHT</string>
    <string name="bmi_healthy">"BMI between 18.6 &amp; 24.9 means you\'re: HEALTHY</string>
    <string name="bmi_overweight">BMI between 25 &amp; 29.9 means you\'re: OVERWEIGHT</string>
    <string name="bmi_obese">BMI over 30 means you\'re: OBESE</string>



</resources>
