<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/navHistory"
        android:icon="@drawable/ic_nav_history"
        android:title="@string/nav_history" />
    <item
        android:id="@+id/navStats"
        android:icon="@drawable/ic_nav_stats"
        android:title="@string/nav_stats" />
    <item
        android:id="@+id/navHome"
        android:icon="@drawable/ic_nav_home"
        android:title="@string/nav_home" />
    <item
        android:id="@+id/navGoals"
        android:icon="@drawable/ic_nav_goals"
        android:title="@string/nav_goals" />

    <item
        android:id="@+id/navProfile"
        android:icon="@drawable/ic_nav_profile"
        android:title="@string/nav_profile" />
</menu>

