<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".GoalsFragment"
    android:padding="20dp">

    <!-- TODO: Update blank fragment layout -->
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/target_goals_heading"
        android:textSize="40sp"
        android:layout_gravity="top|center"/>


    <View
        android:id="@+id/goalsView"
        android:layout_height="3dp"
        android:layout_width="match_parent"
        android:layout_gravity="top"
        android:layout_marginTop="60dp"
        android:background="@color/grey_text">

    </View>

    <EditText
        android:id="@+id/etStepsGoal"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginBottom="70dp"
        android:inputType="number"
        android:textAlignment="center"
        android:textColor="@color/black_text"
        android:hint="@string/set_steps_goal"/>

    <EditText
        android:id="@+id/etWeightGoal"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:inputType="number|numberDecimal"
        android:textAlignment="center"
        android:hint="@string/set_weight_goal"
        android:textColor="@color/black_text"/>


    <TextView
        android:id="@+id/tvCurrentSteps"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/current_steps_goals"
        android:textSize="15sp"
        android:layout_marginBottom="160dp"
        android:layout_gravity="bottom|center"/>

    <TextView
        android:id="@+id/tvSteps"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/steps_not_available"
        android:textSize="15sp"
        android:layout_marginBottom="135dp"
        android:layout_gravity="bottom|center"/>

    <TextView
        android:id="@+id/tvCurrentWeight"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/current_weight_goals"
        android:textSize="15sp"
        android:layout_marginBottom="100dp"
        android:layout_gravity="bottom|center"/>

    <LinearLayout
        android:id="@+id/statsHeaders"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_gravity="center|bottom"
        android:layout_marginBottom="62dp"
        android:padding="10dp">


        <TextView
            android:id="@+id/tvWeight"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/weight_not_available"
            android:textSize="15sp"
            android:layout_gravity="bottom|center"
            android:layout_marginRight="2dp"
            android:layout_marginEnd="2dp" />

        <TextView
            android:id="@+id/tvUnitType"
            android:layout_marginLeft="2dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/weight_not_available"
            android:textSize="15sp"
            android:layout_gravity="bottom|center"
            android:layout_marginStart="2dp" />

    </LinearLayout>
    <Button
        android:id="@+id/btnSetGoals"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|center"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        android:padding="10dp"
        android:textSize="20sp"
        android:layout_marginBottom="10dp"
        android:text="@string/set_goals"/>



</FrameLayout>