<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".HomeFragment">


    <TextView
        android:id="@+id/tvUser"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="20sp"
        android:text="@string/user"
        android:textAlignment="center"/>

    <!--layout for the stats headers-->
    <LinearLayout
        android:id="@+id/statsHeaders"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginTop="25dp"
    android:orientation="horizontal"
    android:gravity="center"
    android:padding="10dp">

        <TextView
            android:id="@+id/tvCalories"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/calories"
            android:textSize="20sp"/>

        <TextView
            android:id="@+id/tvActiveTime"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="50dp"
            android:layout_marginRight="50dp"
            android:text="@string/active_time"
            android:textSize="20sp"/>

        <TextView
            android:id="@+id/tvDistance"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/distance"
            android:textSize="20sp"/>
    </LinearLayout>

    <!--layout for counted stats-->
    <LinearLayout
        android:id="@+id/dataDisplay"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="60dp"
        android:orientation="horizontal"
        android:gravity="center"
        android:padding="10dp">

        <TextView
            android:id="@+id/tvCaloriesDisplay"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/default_calories"
            android:textSize="18sp"/>

        <Chronometer
            android:id="@+id/tvActiveTimeDisplay"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/default_active_time"
            android:layout_marginLeft="100dp"
            android:layout_marginRight="100dp"
            android:textSize="18sp"/>

        <TextView
            android:id="@+id/tvDistanceDisplay"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/default_distance"
            android:textSize="18sp"/>
    </LinearLayout>

    <TextView
        android:id="@+id/tvSteps"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/steps"
        android:layout_marginBottom="15dp"
        android:textSize="35sp"
        android:layout_gravity="center"/>

    <TextView
        android:id="@+id/tvStepCounter"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="18dp"
        android:text="@string/default_steps"
        android:textSize="30sp"
        android:layout_gravity="center"/>


    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_gravity="center"
        android:layout_marginTop="60dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/steps_goal"
            android:layout_marginRight="5dp"
            android:textSize="20sp"/>

        <TextView
            android:id="@+id/tvStepsGoals"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5dp"
            android:text="@string/steps_not_available"
            android:textSize="20sp"/>

    </LinearLayout>

    <Button
        android:id="@+id/btnStart"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|center"
        android:text="@string/start"
        android:textSize="11sp"
        android:layout_marginBottom="20dp"/>


    <android.support.design.widget.FloatingActionButton
        android:id="@+id/fabBMI"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|end"
        app:fabSize="mini"
        android:layout_marginBottom="200dp"
        app:backgroundTint="@color/fab_bmi"
        android:layout_marginRight="25dp"
        app:srcCompat="@drawable/ic_fab_bmi"
        app:pressedTranslationZ="12dp"
        android:visibility="invisible"
        android:layout_marginEnd="25dp" />

    <android.support.design.widget.FloatingActionButton
        android:id="@+id/fabCamera"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|end"
        app:fabSize="mini"
        android:layout_marginBottom="150dp"
        app:backgroundTint="@color/fab_camera"
        android:layout_marginRight="25dp"
        app:srcCompat="@drawable/ic_fab_camera"
        app:pressedTranslationZ="12dp"
        android:visibility="invisible"
        android:layout_marginEnd="25dp" />

    <android.support.design.widget.FloatingActionButton
        android:id="@+id/fabFeed"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|end"
        app:fabSize="mini"
        android:layout_marginBottom="100dp"
        app:backgroundTint="@color/fab_feed"
        android:layout_marginRight="25dp"
        app:srcCompat="@drawable/ic_fab_fitness_feed"
        app:pressedTranslationZ="12dp"
        android:visibility="invisible"
        android:layout_marginEnd="25dp" />



    <android.support.design.widget.FloatingActionButton
        android:id="@+id/fab_main"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|end"
        app:fabSize="normal"
        android:clickable="true"
        android:layout_margin="16dp"
        app:srcCompat="@drawable/ic_fab_plus"
        android:focusable="true"
        app:pressedTranslationZ="12dp"
        android:visibility="visible"/>


</FrameLayout>