<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".bmiMetricFragment"
    android:padding="5dp">

    <ImageView
        android:id="@+id/ivMetricBmiInfo"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:layout_gravity="left"
        android:layout_marginRight="20dp"
        app:srcCompat="@drawable/ic_bmi_info" />

   <LinearLayout
       android:layout_width="match_parent"
       android:layout_height="match_parent"
       android:padding="10dp"
       android:layout_alignParentStart="true"
       android:layout_alignParentTop="true"
       android:gravity="center"
       android:orientation="vertical"
       android:layout_alignParentLeft="true">


       <EditText
           android:id="@+id/etMetricWeight"
           android:layout_width="180dp"
           android:layout_height="wrap_content"
           android:hint="@string/weight_kg"
           android:inputType="number|numberDecimal"
           android:textColor="@color/black_text" />

       <EditText
           android:id="@+id/etMetricHeight"
           android:layout_width="180dp"
           android:layout_height="wrap_content"
           android:layout_marginTop="10dp"
           android:hint="@string/height_m"
           android:inputType="number|numberDecimal"
           android:textColor="@color/black_text" />


       <LinearLayout
           android:layout_width="wrap_content"
           android:layout_height="wrap_content"
           android:orientation="horizontal">

           <Button
               android:id="@+id/btnMetricCalculate"
               android:layout_width="0dp"
               android:layout_height="wrap_content"
               android:layout_gravity="center"
               android:layout_marginTop="5dp"
               android:layout_weight="1"
               android:textSize="11sp"
               android:text="@string/calculate" />

           <Button
               android:id="@+id/btnMetricClear"
               android:text="@string/clear"
               android:layout_width="0dp"
               android:textSize="11sp"
               android:layout_height="wrap_content"
               android:layout_gravity="center"
               android:layout_weight="1"
               android:layout_marginTop="5dp" />
       </LinearLayout>

       <TextView
           android:id="@+id/tvMetricCategory"
           android:layout_width="wrap_content"
           android:layout_height="wrap_content"
           android:text="@string/bmi_category"
           android:layout_gravity="center"
           android:textSize="30sp"
           android:layout_marginTop="15dp"/>

       <TextView
           android:id="@+id/tvMetricResult"
           android:layout_width="wrap_content"
           android:layout_height="wrap_content"
           android:text="@string/bmi_result"
           android:textSize="35sp"
           android:layout_marginTop="30dp"/>
   </LinearLayout>

</FrameLayout>