<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".Login"
    android:background="@color/background"
    android:padding="35dp"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_alignParentStart="true"
    android:layout_alignParentTop="true"
    android:gravity="center"
    android:orientation="vertical"
    android:layout_alignParentLeft="true">

    <ImageView
        android:id="@+id/ivLoginLogo"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:src="@drawable/user_account" />

    <TextView
        android:id="@+id/tvLogin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="35sp"
        android:textStyle="italic"
        android:text="@string/login"
        android:layout_gravity="center"
        android:textColor="@color/white_text"/>

    <EditText
        android:id="@+id/etName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:hint="@string/name"
        android:inputType="textCapWords|textPersonName"
        android:textColor="@color/white_text" />


    <EditText
        android:id="@+id/etPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="15dp"
        android:contentDescription="@string/profile_logo"
        android:drawableRight="@drawable/ic_action_password"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:textColor="@color/white_text" />

    <Button
        android:id="@+id/btnLogin"

        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/login"
        android:background="@drawable/rounded_button"
        android:textSize="20sp"/>

    <TextView
        android:id="@+id/tvRegisterHere"
        android:layout_marginTop="25dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="15sp"
        android:textStyle="italic"
        android:text="@string/register_here"
        android:layout_gravity="center"
        android:textColor="@color/white_text"/>
</LinearLayout>