<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".bmiImperialFragment"
    android:padding="5dp">

    <ImageView
        android:id="@+id/ivImperialBmiInfo"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:layout_gravity="left"
        android:layout_marginRight="20dp"
        app:srcCompat="@drawable/ic_bmi_info" />



    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:gravity="center"
        android:orientation="vertical"
        android:padding="10dp">


        <EditText
            android:id="@+id/etImperialWeight"
            android:layout_width="180dp"
            android:layout_height="wrap_content"
            android:hint="@string/weight_lbs"
            android:inputType="number|numberDecimal"
            android:textColor="@color/black_text" />

        <EditText
            android:id="@+id/etImperialHeight"
            android:layout_width="180dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:hint="@string/height_ft"
            android:inputType="number|numberDecimal"
            android:textColor="@color/black_text" />


        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <Button
                android:id="@+id/btnImperialCalculate"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="5dp"
                android:layout_weight="1"
                android:text="@string/calculate"
                android:textSize="11sp" />

            <Button
                android:id="@+id/btnImperialClear"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="5dp"
                android:layout_weight="1"
                android:text="@string/clear"
                android:textSize="11sp" />
        </LinearLayout>

        <TextView
            android:id="@+id/tvImperialCategory"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="15dp"
            android:text="@string/bmi_category"
            android:textSize="30sp" />

        <TextView
            android:id="@+id/tvImperialResult"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:text="@string/bmi_result"
            android:textSize="35sp" />
    </LinearLayout>

</FrameLayout>