<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="20dp"
    tools:context=".Settings">


    <TextView
        android:id="@+id/tvSettings"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="25dp"
        android:text="@string/unit_types"
        android:textSize="20sp" />

    <View
        android:layout_width="wrap_content"
        android:layout_height="3dp"
        android:layout_marginTop="5dp"
        android:background="@color/grey_text">

    </View>

    <RadioGroup
        android:id="@+id/radUnitTypes"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp">

        <RadioButton
            android:id="@+id/radMetric"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/units_metric"
            android:textSize="20sp" />

        <RadioButton
            android:id="@+id/radImperial"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/units_imperial"
            android:textSize="20sp" />

    </RadioGroup>

    <Button
        android:id="@+id/btnSettingsSave"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="35dp"
        android:text="@string/settings_save"
        android:textSize="16sp" />

</LinearLayout>